Job View & Detail Page + CV builder implemented

--- a/public/styles.css
+++ b/public/styles.css
@@ -3,6 +3,7 @@
 body {
   background-color: #ffffff;
   margin: 0;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 
 h1 {
@@ -136,12 +137,12 @@ h3 {
   padding: 16px;
 }
 
-input[type="text"] {
+/* input[type="text"] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
-}
+} */
 
 button.loginbutton {
   background-color: #bfaa1d;
@@ -216,7 +217,7 @@ select {
   margin-bottom: 5px;
 }
 
-button {
+button, .button {
   background-color: #bfaa1d;
   color: white;
   padding: 14px 20px;
@@ -226,8 +227,9 @@ button {
   font-size: 16px;
 }
 
-button:hover {
+button:hover, .button:hover {
   background-color: #d4c66e;
+  color: white;
 }
 
 /* Responsive layout */
@@ -274,8 +276,8 @@ main {
 .skills,
 .internships {
   border: 0.7px solid #d4c66e;
-  padding: 10px;
-  margin: 5px;
+  /* padding: 10px;
+  margin: 5px; */
   flex: 1;
 }
 
@@ -322,3 +324,32 @@ textarea {
   height: 200px;
   padding: 20px;
 }
+
+.skills-checkbox input {
+  width: auto;
+}
+
+.addmorebtn {
+  padding: 8px 14px;
+}
+
+.cv-template:hover {
+  border: 2px solid #d4c66e;  
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
