--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
       Discover jobs available and opportunities to improve your skills and
       increase your employability.
     </p>
-    <button onclick="window.location.href='/applyforjobs'">
+    <button onclick="window.location.href='/jobs'">
       Find Jobs
     </button>
 
