--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
-
 <main>
-  <h1><center>Employability for the Youth</center></h1>
+  <h1>
+    <center>Employability for the Youth</center>
+  </h1>
   <p>
     We’re here to help young people find jobs and grow their careers. Learn
     more about our opportunities and how you can improve your employability
@@ -8,16 +9,10 @@
   </p>
 
   <div>
-    <img
-      class="youth-image"
-      src="/youth.jpeg"
-      alt="youth"
-      height="400px"
-      width="500px"
-    />
+    <img class="youth-image" src="/youth.jpeg" alt="youth" height="400px" width="500px" />
   </div>
 
-  <section>
+  <!-- <section>
     <h3>Featured Jobs</h3>
     <p>
       Discover jobs available and opportunities to improve your skills and
@@ -46,5 +41,65 @@
         Enquire Now
       </button>
     </div>
+  </section> -->
+
+  <section>
+
+    <div class="row mb-2">
+      <div class="col-md-12">
+
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Featured Jobs</h5>
+            <p>
+              Discover jobs available and opportunities to improve your skills and
+              increase your employability.
+            </p>
+            <button onclick="window.location.href='/jobs'">
+              Find Jobs
+            </button>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="row mb-2">
+      <div class="col-md-12">
+
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Want to post a Job?</h5>
+            <p>
+              Join other employers today and post any jobs and opportunities
+              available for students and young people today.
+            </p>
+            <button onclick="window.location.href='/postajob'">Post a Job</button>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+
+    <div class="row mb-2">
+      <div class="col-md-12">
+
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Mentoring Programme</h5>
+            <p>
+              Send in your enquiry for and upload your CV to be mentored by some
+              of our top mentors.
+            </p>
+            <button onclick="window.location.href='mentoring'">
+              Enquire Now
+            </button>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
   </section>
 </main>
