--- a/views/cv-builder.ejs
+++ b/views/cv-builder.ejs
@@ -77,7 +77,7 @@
 <main>
     <h1 style="display: flex;">
         <center>Theme</center>
-        <div style="width: 50px; height: 50px; border-radius: 50%; background-color: <%= theme === 'blue' ? '#0C243A' : '#007759' %>; margin-left: 10px;"></div>
+        <div style="width: 30px; height: 30px; border-radius: 50%; background-color: <%= theme === 'blue' ? '#0C243A' : '#007759' %>; margin-left: 10px; margin-top: 10px;"></div>
     </h1>
 
     <div class="container">
@@ -166,7 +166,7 @@
                 </div>
 
 
-
+                <hr/>
 
 
                 <div class="row mb-2">
@@ -177,7 +177,7 @@
                     </div>
                 </div>
 
-
+                <hr/>
 
                 <div class="row mb-2">
                     <div class="col-md-12">
@@ -188,6 +188,9 @@
                 </div>
 
 
+                <hr/>
+
+
                 <div class="row mb-2">
                     <div class="col-md-12">
                         <h5>Expretise Area</h5>
@@ -195,6 +198,8 @@
                         <button type="button" class="addmorebtn" onclick="addMoreExpertise()">Add</button>
                     </div>
                 </div>
+
+                <hr/>
 
                 <div class="row mb-2">
                     <div class="col-md-12">
@@ -204,7 +209,7 @@
                     </div>
                 </div>
 
-
+                <hr/>
 
                 <div class="row mb-2">
                     <div class="col-md-12">
