--- a/views/training.ejs
+++ b/views/training.ejs
@@ -95,7 +95,7 @@
             <div class="row mb-2">
 
               <div class="col-md-4 mb-2">
-                <div class="card" onclick="toggleSelection(this)">
+                <div class="card selectedSkills" onclick="toggleSelection(this)">
                   <div class="card-body">
                     <h5 class="card-title">Software Developing</h5>
                   </div>
@@ -103,7 +103,7 @@
                 </div>
               </div>
               <div class="col-md-4 mb-2">
-                <div class="card" onclick="toggleSelection(this)">
+                <div class="card selectedSkills" onclick="toggleSelection(this)">
                   <div class="card-body">
                     <h5 class="card-title">Vocal Communication</h5>
                   </div>
@@ -111,7 +111,7 @@
                 </div>
               </div>
               <div class="col-md-4 mb-2">
-                <div class="card" onclick="toggleSelection(this)">
+                <div class="card selectedSkills" onclick="toggleSelection(this)">
                   <div class="card-body">
                     <h5 class="card-title">Leadership</h5>
                   </div>
@@ -120,7 +120,7 @@
               </div>
 
               <div class="col-md-4 mb-2">
-                <div class="card" onclick="toggleSelection(this)">
+                <div class="card selectedSkills" onclick="toggleSelection(this)">
                   <div class="card-body">
                     <h5 class="card-title">Financial Management</h5>
                   </div>
@@ -128,7 +128,7 @@
                 </div>
               </div>
               <div class="col-md-4 mb-2">
-                <div class="card" onclick="toggleSelection(this)">
+                <div class="card selectedSkills" onclick="toggleSelection(this)">
                   <div class="card-body">
                     <h5 class="card-title">Organisation</h5>
                   </div>
@@ -136,7 +136,7 @@
                 </div>
               </div>
               <div class="col-md-4 mb-2">
-                <div class="card" onclick="toggleSelection(this)">
+                <div class="card selectedSkills" onclick="toggleSelection(this)">
                   <div class="card-body">
                     <h5 class="card-title">Logical Thinking</h5>
                   </div>
