--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,6 +22,10 @@
     var checkbox = card.querySelector('input[type="checkbox"]');
     checkbox.checked = !checkbox.checked;
   }
+    addMore()
+    addMoreKeySkills()
+    addMoreExpertise()
+    addMoreHobbies()
 </script>
 <footer>
   <p>&copy; 2024 Employability for the Youth. All rights reserved.</p>
