--- a/views/cv-builder.ejs
+++ b/views/cv-builder.ejs
@@ -64,7 +64,7 @@
         hobbies_Div.classList.add("row");
 
         hobbies_Div.innerHTML = `<div class="col-md-12">
-        <label for="degree"><b>Hobbies:</b></label>
+        <label for="degree"><b>Hobby:</b></label>
         <input type="text" placeholder="i.e Travelling" name="hobbies[]" required>
         </div>
       `;
@@ -127,7 +127,7 @@
                 <div class="row mb-2">
                     <div class="col-md-12">
                         <label for="aboutme"><b>About Me: </b></label>
-                        <textarea name="aboutme" placeholder="About Me" rows="4" cols="50"></textarea>
+                        <textarea required name="aboutme" placeholder="About Me" rows="4" cols="50"></textarea>
                     </div>
                 </div>
 
